fixed icons to display icons not placeholder, added button icon feature with front and end postion (+storybook)

--- a/src/app/components/atoms/icon/icon.component.scss
+++ b/src/app/components/atoms/icon/icon.component.scss
@@ -1,5 +1,5 @@
-.material-icons {
+mat-icon {
   vertical-align: middle;
-  -webkit-user-select: none; // iOS Safari
+  -webkit-user-select: none;
   user-select: none;
 }
