--- a/src/app/components/atoms/button/button.component.html
+++ b/src/app/components/atoms/button/button.component.html
@@ -1,7 +1,11 @@
-<button
-  [type] = "type"
-  [disabled] = "disabled"
-  [ngClass] = "variant"
->
-  {{ label }}
+<button [type]="type" [disabled]="disabled" [ngClass]="variant">
+  <ng-container *ngIf="iconPosition === 'start'">
+    <app-icon *ngIf="icon" [name]="icon" size="20px"></app-icon>
+  </ng-container>
+
+  <span>{{ label }}</span>
+
+  <ng-container *ngIf="iconPosition === 'end'">
+    <app-icon *ngIf="icon" [name]="icon" size="20px"></app-icon>
+  </ng-container>
 </button>
