--- a/src/app/components/atoms/icon/icon.component.html
+++ b/src/app/components/atoms/icon/icon.component.html
@@ -1,3 +1,3 @@
-<i class="material-icons" [style.fontSize]="size" [style.color]="colour">
+<mat-icon [style.fontSize]="size" [style.color]="colour">
   {{ name }}
-</i>
+</mat-icon>
