--- a/src/app/components/atoms/checkbox/checkbox.component.scss
+++ b/src/app/components/atoms/checkbox/checkbox.component.scss
@@ -1,8 +1,4 @@
 .checkbox-wrapper {
-  display: inline-flex;
-  align-items: center;
-  cursor: pointer;
-
   input {
     display: none;
   }
@@ -10,32 +6,21 @@
   .custom-checkbox {
     width: 16px;
     height: 16px;
-    border: 2px solid #999;
+    border: 2px solid;
     border-radius: 4px;
     display: inline-block;
     position: relative;
 
-    &::after {
-      content: '';
+    .checkmark {
       position: absolute;
-      top: 1px;
+      top: 0;
       left: 4px;
       width: 4px;
       height: 8px;
-      border: solid #333;
+      border: solid;
       border-width: 0 2px 2px 0;
-      transform: rotate(45deg);
-      opacity: 0;
-      transition: opacity 0.2s;
+      color: inherit;
+      content: '';
     }
-  }
-
-  input:checked + .custom-checkbox::after {
-    opacity: 1;
-  }
-
-  input:disabled + .custom-checkbox {
-    opacity: 0.4;
-    cursor: not-allowed;
   }
 }
