fine tuning on checkmark component, added borderless button variant, added tableRow component + storybook

--- a/src/app/components/atoms/badge/badge.component.html
+++ b/src/app/components/atoms/badge/badge.component.html
@@ -1,3 +1,8 @@
-<span class="badge" [ngClass]="variant">
+<span
+  class="badge"
+  [ngClass]="variant"
+  [style.fontSize]="fontSize"
+  [style.fontWeight]="fontWeight"
+  >
   {{ label }}
 </span>
