--- a/src/app/components/atoms/button/button.component.html
+++ b/src/app/components/atoms/button/button.component.html
@@ -1,7 +1,7 @@
 <button
   [type]="type"
   [disabled]="disabled"
-  [ngClass]="variant"
+  [ngClass]="[variant, borderless ? 'borderless' : '']"
   [style.borderRadius]="borderRadius"
 >
   <ng-container *ngIf="icon && iconPosition === 'start'">
