--- a/src/app/components/atoms/badge/badge.component.scss
+++ b/src/app/components/atoms/badge/badge.component.scss
@@ -1,7 +1,7 @@
 .badge {
   display: inline-block;
   padding: 0.25rem 0.75rem;
-  border-radius: 0;
+  border-radius: 5px;
   font-size: 0.875rem;
   font-weight: 500;
   text-align: center;
