--- a/src/app/components/atoms/icon/icon.component.scss
+++ b/src/app/components/atoms/icon/icon.component.scss
@@ -1,5 +1,10 @@
 mat-icon {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   vertical-align: middle;
-  -webkit-user-select: none;
-  user-select: none;
+  font-size: inherit;
+  height: 1em;
+  width: 1em;
+  line-height: 1;
 }
