added following organisms: navTabGroup, statCardGroup, filterActionGroup, tableRowGroup + stories. minor improvements: navTab hover colour, statCard auto sizing

--- a/src/app/components/molecules/filterTabGroup/filterTabGroup.component.html
+++ b/src/app/components/molecules/filterTabGroup/filterTabGroup.component.html
@@ -1,4 +1,4 @@
-<div class="tab-group">
+<div class="filter-tab-group">
   <app-filter-tab-button
     *ngFor="let tab of tabs"
     [label]="tab.label"
