added mainGroup template + storybook. Adjusted sizing and minor tweaks

--- a/src/app/components/atoms/badge/badge.component.html
+++ b/src/app/components/atoms/badge/badge.component.html
@@ -3,6 +3,8 @@
   [ngClass]="variant"
   [style.fontSize]="fontSize"
   [style.fontWeight]="fontWeight"
-  >
+  [style.height]="height"
+  [style.width]="width"
+>
   {{ label }}
 </span>
