--- a/src/app/components/atoms/filterTabButton/filterTabButton.component.html
+++ b/src/app/components/atoms/filterTabButton/filterTabButton.component.html
@@ -3,4 +3,7 @@
   [variant]="active ? 'primary' : 'secondary'"
   [borderRadius]="'9999px'"
   (click)="handleClick()"
+  width="auto"
+  height="35px"
+  fontSize="14px"
 />
