--- a/src/app/components/molecules/actionBar/actionBar.component.html
+++ b/src/app/components/molecules/actionBar/actionBar.component.html
@@ -6,6 +6,10 @@
     variant="secondary"
     (click)="onFilterClick()"
     borderRadius="9999px"
+    width="auto"
+    height="35px"
+    fontSize="14px"
+
   />
 
   <app-button
@@ -14,6 +18,9 @@
     iconPosition="start"
     variant="primary"
     (click)="onExportClick()"
-    borderRadius="6px"
+    borderRadius="8px"
+    width="auto"
+    height="35px"
+    fontSize="14px"
   />
 </div>
