--- a/src/app/components/molecules/actionBar/actionBar.component.scss
+++ b/src/app/components/molecules/actionBar/actionBar.component.scss
@@ -4,9 +4,7 @@
   align-items: center;
 
   app-button {
-    font-weight: 600;
-    font-size: 0.9rem;
-    padding: 0.4rem 0.2rem;
+    //padding: 0.4rem 0.2rem;
     display: flex;
     align-items: center;
     transition: background-color 0.2s;
