--- a/src/app/components/molecules/tableHeader/tableHeader.component.html
+++ b/src/app/components/molecules/tableHeader/tableHeader.component.html
@@ -24,6 +24,6 @@
   <th class="divider-col" aria-hidden="true"></th>
 
   <th class="action-cell">
-    <app-text content="Action" weight="medium" size="sm" />
+    <app-text content="Action" weight="medium" size="md" />
   </th>
 </tr>
