--- a/src/app/components/molecules/tableRow/tableRow.component.html
+++ b/src/app/components/molecules/tableRow/tableRow.component.html
@@ -11,8 +11,10 @@
     <app-badge
     [label]="state"
     [variant]="getBadgeVariant(state)"
-    fontSize="1rem"
-    fontWeight="200"
+    fontSize="1.1rem"
+    fontWeight="500"
+    height="32px"
+    width="150px"
   />
   </td>
 
