--- a/src/app/components/organisms/navTabGroup/navTabGroup.component.scss
+++ b/src/app/components/organisms/navTabGroup/navTabGroup.component.scss
@@ -1,7 +1,7 @@
 .nav-tab-group {
   display: flex;
   gap: 1rem;
+  position: relative;
   border-bottom: 1px solid #e0e0e0;
-  padding-bottom: 0.5rem;
+  align-items: flex-end; // important to align all tab bottoms
 }
-
