--- a/src/app/components/organisms/statCardGroup/statCardGroup.component.scss
+++ b/src/app/components/organisms/statCardGroup/statCardGroup.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
-  padding: 1rem;
+  //padding: 1rem;
   width: 100%;
   margin: 0;
   box-sizing: border-box;
