set up page and minor testing and bug fixes

--- a/src/app/components/atoms/filterTabButton/filterTabButton.component.scss
+++ b/src/app/components/atoms/filterTabButton/filterTabButton.component.scss
@@ -6,7 +6,7 @@
     font-weight: 500;
     font-size: 0.85rem;
     border-width: 2px;
-    background-color: white;
+    //background-color: white;
 
     &.primary {
       border-color: #af15fd;
