--- a/src/app/components/organisms/navTabGroup/navTabGroup.component.html
+++ b/src/app/components/organisms/navTabGroup/navTabGroup.component.html
@@ -4,6 +4,6 @@
     [label]="tab.label"
     [icon]="tab.icon"
     [route]="tab.route"
-    [active]="tab.active"
+    [active]="tab.active ?? false"
   />
 </nav>
