--- a/src/app/components/molecules/actionBar/actionBar.component.scss
+++ b/src/app/components/molecules/actionBar/actionBar.component.scss
@@ -7,7 +7,7 @@
     //padding: 0.4rem 0.2rem;
     display: flex;
     align-items: center;
-    transition: background-color 0.2s;
+    //transition: background-color 0.2s;
 
     // This ensures icons follow text colour
     app-icon, mat-icon {
