--- a/src/app/components/templates/mainGroup/mainGroup.component.scss
+++ b/src/app/components/templates/mainGroup/mainGroup.component.scss
@@ -2,9 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 0.5rem;
-  width: 100%;
-  box-sizing: border-box;
+  padding: 1rem;
+  background: #f5f5f5;
 }
 
 .table-section {
