--- a/src/app/components/atoms/checkbox/checkbox.component.scss
+++ b/src/app/components/atoms/checkbox/checkbox.component.scss
@@ -1,26 +1,45 @@
 .checkbox-wrapper {
+  position: relative;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+
   input {
-    display: none;
+    position: absolute;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    z-index: 2;
+    cursor: pointer;
+    pointer-events: all;
   }
 
   .custom-checkbox {
-    width: 20px;
-    height: 20px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
     border: 2px solid;
     border-radius: 4px;
-    display: inline-block;
-    position: relative;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-    .checkmark {
-      position: absolute;
-      top: 1px;
-      left: 6px;
-      width: 5px;
-      height: 12px;
-      border: solid;
-      border-width: 0 3px 3px 0;
-      color: inherit;
-      content: '';
-    }
+  .checkmark {
+    position: absolute;
+    top: 2px;
+    width: 5px;
+    height: 12px;
+    border: solid;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+    display: inline-block;
+
   }
 }
