--- a/src/app/components/molecules/navTab/navTab.component.html
+++ b/src/app/components/molecules/navTab/navTab.component.html
@@ -1,5 +1,7 @@
 <a
   [routerLink]="route"
+  routerLinkActive="active"
+  [routerLinkActiveOptions]="{ exact: true }"
   class="nav-tab"
   [class.active]="active"
 >
