--- a/src/app/components/templates/mainGroup/mainGroup.component.scss
+++ b/src/app/components/templates/mainGroup/mainGroup.component.scss
@@ -2,8 +2,9 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 1rem;
+  padding: 0rem;
   background: #f5f5f5;
+  margin-right: auto;
 }
 
 .table-section {
@@ -21,7 +22,7 @@ app-stat-card-group {
   margin: 0;
   box-sizing: border-box;
   padding-bottom: 1rem;
-  padding-top: 1rem;
+  padding-top: 0rem;
 }
 
 app-filter-action-bar {
