--- a/src/app/components/organisms/filterActionGroup/filterActionGroup.component.html
+++ b/src/app/components/organisms/filterActionGroup/filterActionGroup.component.html
@@ -1,7 +1,9 @@
 <div class="filter-action-group">
   <app-tab-group
     [tabs]="tabs"
+    [selectedTab]="selectedTab"
     (tabSelected)="handleTabChange($event)"
+
   />
 
   <app-action-bar
