fixed filter button state issue (not rendering purple when active) - Set Total as default filter (with active emit for filter button)

--- a/src/app/components/pages/mainPage/mainPage.component.html
+++ b/src/app/components/pages/mainPage/mainPage.component.html
@@ -2,7 +2,7 @@
   <app-main-group-template
 
     [statCards]="statCards"
-    [filterTabs]="filterTabs"
+    [filterTabs]="filterTabs()"
     [tableData]="visibleTableData()"
     [sortKey]="sortKey()"
     [sortDirection]="sortDirection()"
