--- a/src/app/components/templates/mainGroup/mainGroup.component.html
+++ b/src/app/components/templates/mainGroup/mainGroup.component.html
@@ -5,6 +5,7 @@
 
   <app-filter-action-group
     [tabs]="filterTabs"
+    [selectedTab]="selectedTab"
     (tabChanged)="filterTabChange.emit($event)"
     />
 
