added CSV Export

--- a/src/app/components/pages/mainPage/mainPage.component.html
+++ b/src/app/components/pages/mainPage/mainPage.component.html
@@ -12,5 +12,6 @@
     (rowSelected)="onRowSelected($event)"
     (filterTabChange)="onFilterChange($event)"
     [selectedTab]="selectedFilter()"
+    (exportClicked)="onExportToCSV()"
   />
 </div>
