- Added Service and refactored mainPage for service use. - Cleaned Up code and added Comments

--- a/src/app/components/molecules/actionBar/actionBar.component.scss
+++ b/src/app/components/molecules/actionBar/actionBar.component.scss
@@ -4,12 +4,10 @@
   align-items: center;
 
   app-button {
-    //padding: 0.4rem 0.2rem;
     display: flex;
     align-items: center;
-    //transition: background-color 0.2s;
 
-    // This ensures icons follow text colour
+    // ensures icons follow text colour
     app-icon, mat-icon {
       color: inherit;
     }
