--- a/src/app/components/molecules/statCard/statCard.component.scss
+++ b/src/app/components/molecules/statCard/statCard.component.scss
@@ -1,7 +1,7 @@
 :host {
   display: block;
   flex: 1 1 140px;           // responsive card sizing
-  max-width: 380px;          // optional cap
+  max-width: 380px;
   min-width: 140px;
 }
 
