--- a/src/app/components/pages/mainPage/mainPage.component.html
+++ b/src/app/components/pages/mainPage/mainPage.component.html
@@ -1,6 +1,6 @@
 <div class="page-wrapper">
   <app-main-group-template
-    [statCards]="statCards"
+    [statCards]="statCards()"
     [filterTabs]="filterTabs()"
     [tableData]="visibleTableData()"
     [sortKey]="sortKey()"
